--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,9 @@
         "prisma:generate": "prisma generate"
     },
     "dependencies": {
+        "@netlify/functions": "^1.0.0",
         "@prisma/client": "^4.1.0",
+        "@types/aws-lambda": "^8.10.101",
         "@types/express": "^4.17.13",
         "@types/node": "^18.0.6",
         "apollo-server-lambda": "^3.10.0",
