--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,11 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "prisma:generate": "prisma generate"
+        "prisma:generate": "prisma generate",
+        "prisma:seed": "npx prisma db seed"
+    },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
     },
     "dependencies": {
         "@netlify/functions": "^1.0.0",
@@ -18,6 +22,8 @@
         "prisma": "^4.1.0"
     },
     "devDependencies": {
+        "@types/node": "^18.6.4",
+        "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
     }
 }
