--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
         "netlify-identity-widget": "^1.9.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.34.0",
         "react-router-dom": "6",
         "react-scripts": "5.0.1",
         "typescript": "^4.7.4",
